--- a/styles/index.css
+++ b/styles/index.css
@@ -2,13 +2,13 @@ body{
     background-color:#1d2d44;
     margin: auto 0 auto;
     color:#f0ebd8;
-    height: 100%;
+    height: 20%;
     width: 100%;
+    align-content: center;
 }
 
 
 header h1{
-    display: inline-block;
     font-size:500%;
     margin-left: 10%;
     margin-bottom: 0%;
@@ -16,7 +16,7 @@ header h1{
 }
 header h2{
     display: inline-block;
-    font-size: 100%;
+    font-size: 180%;
     margin-left: 60%;
     margin-right: 2%;
     font-weight: normal;
@@ -25,19 +25,6 @@ header h2{
     font-size:200%;
     display: inline-block;
 }
-
-
-@media only screen and (max-width:650px){
-    .city-display{
-        font-size:200%;
-        margin-left: 10%;
-    }
-    
-    header h2{
-        align-items: center;
-        display: block;
-        margin-left: 10%;
-    }
 
 
 footer {
@@ -84,6 +71,7 @@ footer {
 #increment,
 #decrement{
     display: inline-block;
+    position: relative;
 }
 
 #increment,
@@ -92,6 +80,7 @@ footer {
     font-size:200%;
     background-color: #748cab;
     border: none;
+    position: relative;
 } 
 
 #increment:hover,
@@ -152,15 +141,15 @@ form label,span{
     margin-left: 10%;
     border-radius: 15px;;
     height: 90%;
-    width: 120%
+    width: 120%;
 }
 
 .container-garden h2{
     text-align: center;
 }
 .container-garden div{
-    background-color:#f0ebd8;
-    border-radius: 15px;
+    /* background-color:#f0ebd8; */
+    /* border-radius: 15px; */
     height: 90%;
 }
 
@@ -173,12 +162,13 @@ form label,span{
 
 
 .inner-grid-land{
-    align-self: end;
-    text-align: center;
+    text-align:center;
     width: 100%;
-    font-size:310%;
-    margin-right: 10%;
+    font-size:300%;
+    margin-right: 5%;
+    margin-left: 5%;
     margin-bottom: 0%;
+    right: 10%;
 }
 
 .inner-grid-sky{
@@ -186,7 +176,7 @@ form label,span{
     text-align: center;
     width: 100%;
     font-size:310%;
-    margin-right: 10%;
+    margin-right: 0%;
     margin-bottom: 0%;
 }
 
@@ -210,3 +200,416 @@ form label,span{
 
 
 
+
+
+
+/* SUNNY */
+.sunny { 
+	animation: sunny 15s linear infinite;
+	background: linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 100%);  
+    height: 50px;
+	width: 60px; 
+    position: sticky;
+    margin-top: 0%; 
+    margin-left: 0%;
+    margin-right:10%;
+    align-content: start;
+
+}
+.sunny:before {
+	background: linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 100%);
+	content: ''; 
+	height: 140px; 
+	width: 20px;
+	opacity: 1; 
+	bottom: 0px;
+	left: 0px; 
+	transform: rotate(90deg);
+}
+.sunny:after {
+	background:orange; 
+	border-radius: 50%; 
+	box-shadow: rgba(213, 92, 11, 0.2) 0 0 0 15px;
+	content: '';  
+	height: 80px;
+	width: 80px;  
+	position: absolute; 
+	left: 20%; 
+	top: 30px;
+}
+
+
+
+
+/* CLOUDY */
+.cloudy {
+	animation: cloudy 5s ease-in-out infinite;
+	background: #FFFFFF;
+	border-radius: 50%;
+	box-shadow: 
+		#FFFFFF 65px -15px 0 -5px, 
+		#FFFFFF 25px -25px, 
+		#FFFFFF 30px 10px, 
+		#FFFFFF 60px 15px 0 -10px, 
+		#FFFFFF 85px 5px 0 -5px;
+	height: 50px;
+	width: 60px; 
+    position: sticky;
+    margin-left: 3%;
+    margin-right:8%;
+    display: inline-block;
+	left: 10%;
+	top: 60px; 
+}
+
+
+
+@keyframes cloudy {
+	50% { transform: translateY(-20px); }
+}
+@keyframes cloudy_shadow {
+	50% { transform: translateY(20px) scale(.7); opacity:.05; }
+}
+
+/* RAINY */
+.rainy {
+	animation: rainy 5s ease-in-out infinite 1s;
+	background: #CCCCCC; 
+	border-radius: 50%;
+	box-shadow: 
+		#CCCCCC 65px -15px 0 -5px, 
+		#CCCCCC 25px -25px, 
+		#CCCCCC 30px 10px, 
+		#CCCCCC 60px 15px 0 -10px, 
+		#CCCCCC 85px 5px 0 -5px;
+        height: 50px;
+        width: 60px; 
+        position: sticky;
+        margin-left: 3%;
+        margin-right:8%;
+        display: inline-block;
+        left: 10%;
+        top: 60px;
+}
+
+.rainy:before {
+	animation: rainy_rain .7s infinite linear;
+	content: '';
+	background: #f0eded;
+	border-radius: 50%;
+	display: block;
+	height: 6px;
+	width: 3px;
+	opacity: 0.3;
+	transform: scale(.9);
+}
+@keyframes rainy {
+	50% { transform: translateY(-20px); }
+}
+@keyframes rainy_shadow {
+	50% { transform: translateY(20px) scale(.7); opacity: 0.05; }
+}
+@keyframes rainy_rain {
+	2% {  
+		box-shadow: 
+			rgba(0,0,0,0) 30px 30px, 
+			rgba(0,0,0,0) 40px 40px,  
+            rgb(206, 178, 200) 50px 75px, 
+			rgb(184, 180, 180) 55px 50px, 
+			rgb(236, 228, 228) 70px 100px, 
+			#000 80px 95px, 
+			#000 110px 45px, 
+			#000 90px 35px; 
+	}
+	25% {  
+        box-shadow: 
+			#000 30px 45px,
+			#000 40px 60px,
+			#000 50px 90px,
+			#000 55px 65px,
+			rgba(0,0,0,0) 70px 120px,
+			rgba(0,0,0,0) 80px 120px,
+			#000 110px 70px,
+			#000 90px 60px;
+	}
+	26% {  
+		box-shadow:
+			#000 30px 45px,
+			#000 40px 60px,
+			#000 50px 90px,
+			#000 55px 65px,
+			rgba(0,0,0,0) 70px 40px,
+			rgba(0,0,0,0) 80px 20px,
+			#000 110px 70px,
+			#000 90px 60px; 
+	}
+	50% { 
+		box-shadow:
+			#000 30px 70px,
+			#000 40px 80px,
+			rgba(0,0,0,0) 50px 100px,
+			#000 55px 80px,
+			#000 70px 60px,
+			#000 80px 45px,
+			#000 110px 95px,
+			#000 90px 85px;
+	}
+	51% {
+		box-shadow:
+			#000 30px 70px,
+			#000 40px 80px,
+			rgba(0,0,0,0) 50px 45px,
+            rgba(0,0,0,0) 50px 45px,
+            rgba(0,0,0,0) 55px 80px,
+			rgba(0,0,0,0) 70px 60px,
+			rgba(0,0,0,0) 80px 45px,
+			rgba(0,0,0,0) 110px 95px,
+			rgba(0,0,0,0) 90px 85px;
+	}
+	75% {
+		box-shadow:
+			#000 30px 95px,
+			#000 40px 100px,
+			#000 50px 60px,
+			rgba(0,0,0,0) 55px 95px,
+			#000 70px 80px,
+			#000 80px 70px,
+			rgba(0,0,0,0) 110px 120px,
+			rgba(0,0,0,0) 90px 110px;
+	}
+	76% {
+		box-shadow:
+			#000 30px 95px,
+			#000 40px 100px,
+			#000 50px 60px,
+			rgba(0,0,0,0) 55px 35px,
+            rgb(206, 178, 200)s80px 70px,
+			rgba(0,0,0,0) 110px 25px,
+			rgba(0,0,0,0) 90px 15px;
+	}
+	100% {
+		box-shadow:
+			rgba(0,0,0,0) 30px 120px,
+			rgba(0,0,0,0) 40px 120px,
+			rgb(177, 175, 175) 50px 75px,
+			rgb(36, 168, 80) 55px 50px,
+			rgb(206, 178, 200) 70px 100px,
+			rgb(206, 178, 200) 80px 95px,
+			rgb(206, 178, 200) 110px 45px,
+			rgb(206, 178, 200) 90px 35px;
+	}
+}
+
+
+/* RAINBOW */
+.rainbow {
+	animation: rainbow 5s ease-in-out infinite;
+	border-radius: 170px 0 0 0;
+	box-shadow: 
+		#FB323C -2px -2px 0 1px,
+		#F99716 -4px -4px 0 3px,
+		#FEE124 -6px -6px 0 5px,
+		#AFDF2E -8px -8px 0 7px,
+		#6AD7F8 -10px -10px 0 9px,
+		#60B1F5 -12px -12px 0 11px,
+		#A3459B -14px -14px 0 13px;
+    height: 50px;
+    width: 60px; 
+    position: sticky;
+    margin-left: 5%;
+    margin-right:5%;
+    display: inline-block;
+    left: 10%;
+    top: 60px;
+    transform: rotate(40deg);
+}
+
+@keyframes rainbow {
+	50% { transform: rotate(50deg); }
+}
+@keyframes rainbow_shadow {
+	50% { transform:  rotate(-50deg) translate(10px) scale(.7); opacity: 0.05; }
+}
+
+
+
+
+
+/* SNOWY */
+.snowy {
+	animation: snowy 5s ease-in-out infinite 1s;
+	background: #FFFFFF; 
+	border-radius: 50%;
+	box-shadow: 
+		#FFFFFF 65px -15px 0 -5px, 
+		#FFFFFF 25px -25px, 
+		#FFFFFF 30px 10px, 
+		#FFFFFF 60px 15px 0 -10px, 
+		#FFFFFF 85px 5px 0 -5px;
+
+	height: 50px;
+    width: 60px; 
+    position: sticky;
+    margin-left: 3%;
+    margin-right:8%;
+    display: inline-block;
+
+}
+
+.snowy:before {
+	animation: snowy_snow 2s infinite linear;
+	content: '';
+	border-radius: 50%;
+	display: block;
+	height: 7px;
+	width: 7px;
+	opacity: 0.8;
+	transform: scale(.9);
+}
+@keyframes snowy {
+	50% { transform: translateY(-20px); }
+}
+@keyframes snowy_shadow {
+	50% { transform: translateY(20px) scale(.7); opacity: 0.05; }
+}
+@keyframes snowy_snow {
+	0% {  
+		box-shadow: 
+			rgba(238,238,238,0) 30px 30px, 
+			rgba(238,238,238,0) 40px 40px,  
+			#EEEEEE 50px 75px, 
+			#EEEEEE 55px 50px, 
+			#EEEEEE 70px 100px, 
+			#EEEEEE 80px 95px, 
+			#EEEEEE 110px 45px, 
+			#EEEEEE 90px 35px; 
+	}
+	25% {  
+        box-shadow: 
+			#EEEEEE 30px 45px,
+			#EEEEEE 40px 60px,
+			#EEEEEE 50px 90px,
+			#EEEEEE 55px 65px,
+			rgba(238,238,238,0) 70px 120px,
+			rgba(238,238,238,0) 80px 120px,
+			#EEEEEE 110px 70px,
+			#EEEEEE 90px 60px;
+	}
+	26% {  
+		box-shadow:
+			#EEEEEE 30px 45px,
+			#EEEEEE 40px 60px,
+			#EEEEEE 50px 90px,
+			#EEEEEE 55px 65px,
+			rgba(238,238,238,0) 70px 40px,
+			rgba(238,238,238,0) 80px 20px,
+			#EEEEEE 110px 70px,
+			#EEEEEE 90px 60px; 
+	}
+	50% { 
+		box-shadow:
+			#EEEEEE 30px 70px,
+			#EEEEEE 40px 80px,
+			rgba(238,238,238,0) 50px 100px,
+			#EEEEEE 55px 80px,
+			#EEEEEE 70px 60px,
+			#EEEEEE 80px 45px,
+			#EEEEEE 110px 95px,
+			#EEEEEE 90px 85px;
+	}
+	51% {
+		box-shadow:
+			#EEEEEE 30px 70px,
+			#EEEEEE 40px 80px,
+			rgba(238,238,238,0) 50px 45px,
+			#EEEEEE 55px 80px,
+			#EEEEEE 70px 60px,
+			#EEEEEE 80px 45px,
+			#EEEEEE 110px 95px,
+			#EEEEEE 90px 85px;
+	}
+	75% {
+		box-shadow:
+			#EEEEEE 30px 95px,
+			#EEEEEE 40px 100px,
+			#EEEEEE 50px 60px,
+			rgba(238,238,238,0) 55px 95px,
+			#EEEEEE 70px 80px,
+			#EEEEEE 80px 70px,
+			rgba(238,238,238,0) 110px 120px,
+			rgba(238,238,238,0) 90px 110px;
+	}
+	76% {
+		box-shadow:
+			#EEEEEE 30px 95px,
+			#EEEEEE 40px 100px,
+			#EEEEEE 50px 60px,
+			rgba(238,238,238,0) 55px 35px,
+			#EEEEEE 70px 80px,
+			#EEEEEE 80px 70px,
+			rgba(238,238,238,0) 110px 25px,
+			rgba(238,238,238,0) 90px 15px;
+	}
+	100% {
+		box-shadow:
+			rgba(238,238,238,0) 30px 120px,
+			rgba(238,238,238,0) 40px 120px,
+			#EEEEEE 50px 75px,
+			#EEEEEE 55px 50px,
+			#EEEEEE 70px 100px,
+			#EEEEEE 80px 95px,
+			#EEEEEE 110px 45px,
+			#EEEEEE 90px 35px;
+	}
+}
+
+
+
+@media only screen and (max-width:1000px){
+    .city-display{
+        font-size:200%;
+        margin-left: 10%;
+    }
+    
+    header h2{
+        align-items: center;
+        display: block;
+        margin-left: 10%;
+    }
+    .subtitle{
+        font-size: 20px
+    } 
+    .inner-grid-land{
+        font-size:180%;
+        text-align: end;
+    }
+
+    #increment,
+    #decrement{
+        font: 10px;
+        font-size:150%;
+        border: none;
+    } 
+    #temperature-value{
+        margin-bottom: 0%;
+
+    }
+    #reset-button{
+        position: relative;
+        font-size: 20%;
+        width: 70%;
+        height: 15%
+    }
+    #city, 
+    #sky-type{
+        font-size:15%;
+        width: 90%;
+        height:10%;      
+    }
+
+    #display-sky{
+        width: 100%;
+        position: sticky;
+    }
+
+}
