--- a/styles/index.css
+++ b/styles/index.css
@@ -18,8 +18,25 @@
 
 body {
     background-color: #A6ACCD;
-    padding: 30px 50px;
+    padding: 10px 50px;
 }
+
+.text {
+    font-family: Arial, Helvetica, sans-serif;
+    /* color: #eeffff; */
+    color: #676E95;
+    text-align: left;
+    font-style: italic;
+}
+
+button {
+    padding: 2px;
+    background-color: #676E95;
+}
+
+/*------------------------------------------
+------------ Title Card --------------------
+------------------------------------------*/
 
 #title {
     grid-column: 1/2;
@@ -43,16 +60,41 @@ body {
     align-self: flex-end;
 }
 
+/*------------------------------------------
+------------ Sky Image Card ----------------
+------------------------------------------*/
+
 #sky-display {
     grid-column: 2/4;
     grid-row: 1/2;
 }
+
+#sky-display {
+    background-image: url(/imgs/sky-sunny.jpg);
+    background-size: cover;
+    background-position: top;
+}
+
+/*------------------------------------------
+------------ City Text Card ----------------
+------------------------------------------*/
 
 #city-block {
     grid-column: 1/2;
     grid-row: 2/3;
     padding-left: 30px;
 }
+
+#city-display {
+    font-size: 20pt;
+    font-style: italic;
+    font-weight: bolder;
+    color: #dcdff0;
+}
+
+/*------------------------------------------
+------------ City Input Card ---------------
+------------------------------------------*/
 
 #city-input-block {
     grid-column: 1/2;
@@ -69,15 +111,11 @@ body {
 #city-input {
     padding: 10px;
     border-radius: 10px;
-    background-color: #A6ACCD;
+    background-color: #dcdff0;
     color: #292D3E;
     font-size: 14pt;
     border: 0;
 }
-
-/* #reset-button {
-    
-} */
 
 #city-reset {
     padding: 10px;
@@ -97,30 +135,15 @@ body {
     transform: translateY(2px);
 }
 
+/*------------------------------------------
+----------- Temperature Card ---------------
+------------------------------------------*/
+
 #temperature-block {
     grid-column: 2/3;
     grid-row: 2/4;
     padding: 0px 30px 0px 30px;
 }
-
-#sky-select-block {
-    grid-column: 3/4;
-    grid-row: 2/4;
-}
-
-#landscape-block {
-    grid-column: 1/4;
-    grid-row: 4/6;
-}
-
-.text {
-    font-family: Arial, Helvetica, sans-serif;
-    /* color: #eeffff; */
-    color: #676E95;
-    text-align: left;
-    font-style: italic;
-}
-
 
 .temp-card-container{
     display: flex;
@@ -146,9 +169,31 @@ body {
     font-style: normal;
 }
 
-button {
-    padding: 2px;
-    background-color: #676E95;
+/*------------------------------------------
+------------ Sky Select Card ---------------
+------------------------------------------*/
+
+#sky-select-block {
+    grid-column: 3/4;
+    grid-row: 2/4;
+}
+
+#sky-selector {
+    padding: 10px;
+    border-radius: 10px;
+    width: 100%;
+    background-color: #dcdff0;
+    color: #292D3E;
+    font-size: 14pt;
+}
+
+/*------------------------------------------
+------------ Landscape Card ----------------
+------------------------------------------*/
+
+#landscape-block {
+    grid-column: 1/4;
+    grid-row: 4/6;
 }
 
 #landscape-block {
@@ -157,15 +202,5 @@ button {
     background-position: bottom;
 }
 
-#sky-display {
-    background-image: url(/imgs/sky-sunny.jpg);
-    background-size: cover;
-    background-position: top;
-}
 
-#city-display {
-    font-size: 20pt;
-    font-style: normal;
-    font-weight: bolder;
-    color: #eeffff;
-}
+
